--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/jens.wagner/Documents/VIT/H2/Workspace/eingabe.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jens Wagner/Documents/VIT/H2/Workspace/eingabe.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
